<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".PatientHomeActivity">

    <!-- Título de la página de paciente -->
    <TextView
        android:id="@+id/tvPatientHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_home_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Mensaje de bienvenida al paciente -->
    <TextView
        android:id="@+id/tvWelcomePatient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPatientHomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Bienvenido, Paciente: xxxxx! (Rol: paciente)" />

    <!-- Datos del paciente (Diagnóstico, Médico, Próxima Cita) -->
    <TextView
        android:id="@+id/tvMyDiagnosis"
        style="@style/DetailLabelTextView"
        android:layout_marginTop="32dp"
        android:text="@string/label_my_diagnosis"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomePatient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Mi diagnostico: COVID-19" />

    <TextView
        android:id="@+id/tvMyDoctor"
        style="@style/DetailLabelTextView"
        android:layout_marginTop="16dp"
        android:text="@string/label_my_doctor"
        app:layout_constraintTop_toBottomOf="@+id/tvMyDiagnosis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Doctor que te atendió: Santiago" />

    <TextView
        android:id="@+id/tvNextAppointment"
        style="@style/DetailLabelTextView"
        android:layout_marginTop="16dp"
        android:text="@string/label_next_appointment"
        app:layout_constraintTop_toBottomOf="@+id/tvMyDoctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Próxima visita: 20-07-2025" />

    <!-- Botón para añadir a Google Calendar -->
    <Button
        android:id="@+id/btnAddToCalendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add_to_calendar"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:padding="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tvNextAppointment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para cerrar sesión -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_logout"
        android:backgroundTint="@color/colorError"
        android:textColor="@color/white"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddToCalendar"
        app:layout_constraintVertical_bias="1.0" />

    <!-- ProgressBar para indicar carga -->
    <ProgressBar
        android:id="@+id/progressBarPatientHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
